gccida/g1/ix86_initial_elimination_offset
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_initial_elimination_offset/src/i386.c:4471:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 4013, "ix86_initial_elimination_offset"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_initial_elimination_offset/src/i386.c:4476:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 4017, "ix86_initial_elimination_offset"); 
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_initial_elimination_offset/src/obj/i386.o] Error 1
